--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,11 @@ ehthumbs.db
 # Folder config file
 Desktop.ini
 
+#binary
+bin/
+target/
+lib/
+
 # Recycle Bin used on file shares
 $RECYCLE.BIN/
 
